# edm_project

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  app.sh  config.h  grub  install_essentials.sh  install_gcc13.sh  run_withaudio.sh
App/: CMakeLists.txt  main.cpp
App/ADCCalcPanel/: ADCCalcPanel.cpp  ADCCalcPanel.h  ADCCalcPanel.ui
App/CoordPanel/: CoordPanel.cpp  CoordPanel.h  CoordPanel.ui
App/CoordSettingPanel/: CoordSetToGivenValueDialog.cpp  CoordSetToGivenValueDialog.h  CoordSetToGivenValueDialog.ui  CoordSettingPanel.cpp  CoordSettingPanel.h  CoordSettingPanel.ui
App/DataDisplayer/: DataDisplayer.cpp  DataDisplayer.h  DataDisplayer.ui
App/DataQueueRecordPanel/: DataQueueRecordPanel.cpp  DataQueueRecordPanel.h  DataQueueRecordPanel.ui
App/GCodePanel/: GCodePanel.cpp  GCodePanel.h  GCodePanel.ui
App/IOPanel/: IOPanel.cpp  IOPanel.h  IOPanel.ui
App/InfoPanel/: InfoPanel.cpp  InfoPanel.h  InfoPanel.ui
App/InputHelper/: InputHelper.h
App/LogListPanel/: LogListPanel.cpp  LogListPanel.h  LogListPanel.ui
App/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
App/MovePanel/: MovePanel.cpp  MovePanel.h  MovePanel.ui
App/PowerPanel/: PowerDatabase.cpp  PowerDatabase.h  PowerPanel.cpp  PowerPanel.h  PowerPanel.ui
App/Resource/: app_resource.qrc  appgui.qss
App/SharedCoreData/: SharedCoreData.cpp  SharedCoreData.h
App/SharedCoreData/Power/: PowerDatabase.cpp  PowerDatabase.h  PowerDatabase.ui  PowerManager.cpp  PowerManager.h
App/SystemSettingPanel/: SystemSettingPanel.cpp  SystemSettingPanel.h  SystemSettingPanel.ui
App/TaskManager/: GCodeRunner.cpp  GCodeRunner.h  GCodeTask.h  GCodeTaskBase.h  GCodeTaskConverter.cpp  GCodeTaskConverter.h  TaskHelper.h  TaskManager.cpp  TaskManager.h
App/TestPanel/: TestPanel.cpp  TestPanel.h  TestPanel.ui
App/codeeditor/: codeeditor.cpp  codeeditor.h  highlighter.cpp  highlighter.h
Conf/: c1.json  coord.json  coord.json.bak  coord.json.bak.2  coord.json.bak.4  coord.json.hcent3axis  ecatdefine.json  gui.qss  gui1.qss  logdefine.json  logdefine2.json  power.db  power.db.bak  system.json
Interpreter/rs274pyInterpreter/include/: RS274InterpreterWrapper.h
Interpreter/rs274pyInterpreter/pymodule/: __init__.py  rs274.py  test1.py
Interpreter/rs274pyInterpreter/src/: RS274InterpreterWrapper.cpp
Logger/: LogMacro.h  LogManager.cpp  LogManager.h
Src/: config.h  edm.h
Src/CanReceiveBuffer/: CanReceiveBuffer.cpp  CanReceiveBuffer.h
Src/Coordinate/: Coordinate.cpp  Coordinate.h  CoordinateManager.cpp  CoordinateManager.h  CoordinateSystem.cpp  CoordinateSystem.h
Src/EcatManager/: EcatDefine.h  EcatManager.cpp  EcatManager.h  Panasonic.h  ServoDefines.h  ServoDevice.cpp  ServoDevice.h
Src/Exception/: exception.h
Src/GlobalCommandQueue/: GlobalCommand.h  GlobalCommandQueue.cpp  GlobalCommandQueue.h
Src/HandboxConverter/: HandboxConverter.cpp  HandboxConverter.h
Src/Interpreter/GCodeCommand/: GCodeCommand.h
Src/Logger/: LogDefine.cpp  LogDefine.h  LogMacro.h  LogManager.cpp  LogManager.h
Src/Motion/: JumpDefines.h  MoveDefines.h  motion.cpp  motion.h
Src/Motion/MotionSharedData/: DataRecordInstance.h  DataRecordInstance.inl  DataRecordInstance1.cpp  DataRecordInstance1.h  DataRecordInstance2.cpp  DataRecordInstance2.h  MotionSharedData.cpp  MotionSharedData.h  SpindleControl.cpp  SpindleControl.h
Src/Motion/MotionSignalQueue/: MotionSignalQueue.cpp  MotionSignalQueue.h
Src/Motion/MotionStateMachine/: DrillAutoTask.cpp  DrillAutoTask.h  G00AutoTask.cpp  G00AutoTask.h  G01AutoTask.cpp  G01AutoTask.h  G01GroupAutoTask.cpp  G01GroupAutoTask.h  G04AutoTask.h  M00FakeAutoTask.h  MotionAutoTask.cpp  MotionAutoTask.h  MotionAutoTaskRunner.cpp  MotionAutoTaskRunner.h  MotionStateMachine.cpp  MotionStateMachine.h
Src/Motion/MotionThread/: MotionCommand.h  MotionCommandQueue.cpp  MotionCommandQueue.h  MotionThreadController.cpp  MotionThreadController.h
Src/Motion/MotionUtils/: MotionUtils.h
Src/Motion/Moveruntime/: Moveruntime.cpp  Moveruntime.h
Src/Motion/MoveruntimeWrapper/: MoveruntimeWrapper.cpp  MoveruntimeWrapper.h
Src/Motion/PauseMoveController/: AxisRecorder.cpp  AxisRecorder.h  PauseMoveController.cpp  PauseMoveController.h
Src/Motion/PointMoveHandler/: PointMoveHandler.cpp  PointMoveHandler.h
Src/Motion/SignalBuffer/: SignalBuffer.cpp  SignalBuffer.h
Src/Motion/TouchDetectHandler/: TouchDetectHandler.cpp  TouchDetectHandler.h
Src/Motion/Trajectory/: TrajectoryList.cpp  TrajectoryList.h  TrajectorySegement.cpp  TrajectorySegement.h
Src/QtDependComponents/AudioRecorder/: AudioRecordWorker.cpp  AudioRecordWorker.h  AudioRecorder.cpp  AudioRecorder.h
Src/SystemSettings/: SystemSettings.cpp  SystemSettings.h
Src/TaskManager/: Task.h  TaskManager.cpp  TaskManager.h
Src/Utils/Breakout/: BreakoutFilter.cpp  (+1 more)
cmake/: spdlog.cmake
gcode/: 01-天方地圆 - 后处理 (another copy).py  01-天方地圆 - 后处理 -part3.py  01-天方地圆 - 后处理.py  TEST  test.py  test1.py  test2.py  test3.py  test_drill  test_g00  test_g00_2  test_g01  test_g01_2  test_g01_3  test_mill.py  test_move.py  test_nospeed_g01  test_points.py
scripts/: App.desktop  generate_desktop.sh  plot_axis_vol.py  plot_together.py  plot_wav.py
tests/: CMakeLists.txt
tests/Coord/: CMakeLists.txt  test_coord.cpp
tests/Ecat/: CMakeLists.txt  test_decode_output.cpp  test_ecat.cpp
tests/Filters/: CMakeLists.txt  test_slidingcounter.cpp  test_slidingfilter.cpp
tests/GlobalCommandQueue/: CMakeLists.txt  test_cmd_queue.cpp
tests/Interpreter/: CMakeLists.txt  test_boost_python.cpp  test_interp_wrapper.cpp  test_raw_python.cpp
tests/Interpreter/pytest/: test1.py  test2.py
tests/Logger/: CMakeLists.txt  test_serialize.cpp  test_spdlog.cpp
tests/Motion/: CMakeLists.txt  test_pm.cpp  test_trajectory.cpp  testmotiongui.cpp  testmotiongui.h  testmotiongui.ui
tests/Netif/: CMakeLists.txt  test_netif.cpp
tests/QtTest/: CMakeLists.txt  can0_up.sh  test_can.cpp  test_io.cpp  test_power.cpp  test_qt.cpp  testpowerwidget.cpp  testpowerwidget.h  testpowerwidget.ui
tests/json/: CMakeLists.txt  test_json.cpp
(+35 files in other folders)
